<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="UDT_TurnPages_RD" Id="{fa6ea581-bca8-47b4-b090-b79d527b18bd}">
    <Declaration><![CDATA[TYPE UDT_TurnPages_RD :
STRUCT
  
value : INT; // 页当前值
maxValue : Int; // 翻页最大值
minValue : Int; // 翻页最小值
increment : Int; // 单次增/减量
pageNumberDisplay : WORD; // 页码显示
prevDisplay : Bool; // 上一页按钮显示
nextDisplay : Bool; // 下一页按钮显示
prevClick : Bool; // 上一页按钮点击
nextClick : Bool; // 下一页按钮点击
 
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>